# MolSim-SS25-Thesis

./: CMakeLists.txt  Cargo.toml  Doxyfile  README.md  ROADMAP.md  setup.sh
.cmake/: doxygen.cmake  test-google.cmake
.github/: labeler.yml
.github/workflows/: cargo.yml  cpp.yml  docs.yml  rustdoc.yml  template.yaml
cpp-moldyn-cli/: Args.h  README.md  main.cpp
cpp-moldyn-core/: Particle.h  Vec3.h
cpp-moldyn-core/force/: Force.cpp  Force.h  Newton.h
cpp-moldyn-io/: Reader.h
cpp-moldyn-test/: vec_test.cc
input/: halleys-comet.yaml  two-bodies-collision.yaml
moldyn-cli/: Cargo.toml
moldyn-cli/src/: main.rs
moldyn-core/: Cargo.toml
moldyn-core/src/: lib.rs  main.rs  particle.rs  vec3.rs
moldyn-core/src/forces/: custom.rs  ljp.rs  mod.rs  newton.rs
moldyn-core/src/reader/: args.rs  entry.rs  mod.rs
moldyn-core/src/simulation/: args.rs  cells.rs  mod.rs  sum.rs
moldyn-core/src/writer/: mod.rs  txt.rs  vtk.rs  xyz.rs  yml.rs
moldyn-io/: Cargo.toml
moldyn-io/src/: lib.rs
moldyn-io/src/reader/: entry.rs  mod.rs
moldyn-io/src/writer/: mod.rs  txt.rs  vtk.rs  xyz.rs  yml.rs
moldyn-wasm/: Cargo.toml
moldyn-wasm/src/: lib.rs  macros.rs  vec3.rs
presentation/: .gitignore  Reference.bib  Task1.tex
template-cpp/: .gitignore  CMakeLists.txt  README.md
template-cpp/src/: FileReader.cpp  FileReader.h  MolSim.cpp  Particle.cpp  Particle.h
template-cpp/src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
template-cpp/src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h
template-rust/: Cargo.toml  README.md
template-rust/src/: file_reader.rs  main.rs  particle.rs
template-rust/src/output_writer/: mod.rs  vtk.rs  xyz.rs
